# personal-assistant

./: .gitignore  README.md  api.py  flake.nix  main.py  pyproject.toml
app/: app.py  chain.py  db.py  ingest.py
notebooks/: load_documents.ipynb  pyproject.toml
rag/: __init__.py  chain.py  database.py  db.py  ingest.py  prompts.py
