[tool.poetry]
name = "app"
version = "0.1.0"
description = "Application for a personal assistant"
authors = ["Akshay Karle <akshay.a.karle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.339"
gpt4all = "^2.0.2"
chromadb = "^0.4.17"
langchainhub = "^0.1.14"
bs4 = "^0.0.1"
tqdm = "^4.66.1"
unstructured = "0.7.12"
unstructured-inference = "^0.7.16"
pytesseract = "^0.3.10"
jq = "^1.6.0"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
