[tool.poetry]
name = "app"
version = "0.1.0"
description = "Application for a personal assistant"
authors = ["Akshay Karle <akshay.a.karle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<3.11"
langchain = "^0.0.342"
chromadb = "^0.4.18"
langchainhub = "^0.1.14"
bs4 = "^0.0.1"
tqdm = "^4.66.1"
jq = "^1.6.0"
sentence-transformers = "^2.2.2"
llama-cpp-python = "^0.2.20"
gguf = "^0.5.1"
unstructured = {extras = ["all-docs"], version = "^0.11.2"}
unstructured-pytesseract = "^0.3.12"
pikepdf = "^8.7.1"
pypdf = "^3.17.1"
streamlit = "^1.29.0"
watchdog = "^3.0.0"
langserve = "^0.0.35"
uvicorn = "^0.24.0.post1"
sse-starlette = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
