[tool.poetry]
name = "app"
version = "0.1.0"
description = "Application for a personal assistant"
authors = ["Akshay Karle <akshay.a.karle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<3.11"
chromadb = "^0.4.22"
unstructured = "^0.12.4"
unstructured-pytesseract = "^0.3.12"
pillow-heif = "^0.15.0"
pikepdf = "^8.13.0"
pypdf = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
